pixel perfection updates

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/inter_bold"
         android:gravity="center"
         android:text="Building: McBryde"
         android:textSize="20sp"
@@ -50,8 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter"
+        android:layout_marginEnd="150dp"
+        android:fontFamily="@font/inter_bold"
         android:text="Time Start"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,14 +60,16 @@
 
     <TextView
         android:id="@+id/timeEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_width="89dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/inter_bold"
+        android:gravity="center"
         android:text="Time End"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.387"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeStart" />
 
@@ -75,12 +77,13 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/inter_bold"
         android:text="Date"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeEnd" />
 
@@ -88,12 +91,13 @@
         android:id="@+id/participantsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/inter_bold"
         android:text="Particpants"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.403"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date" />
 
@@ -153,10 +157,14 @@
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="40dp"
+        android:fontFamily="@font/inter_bold"
         android:text="SUBMIT"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
