--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="Select a Time Frame"
         android:textSize="30sp"
@@ -25,12 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="Building: McBryde"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scheduleTitle" />
 
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="150dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:text="Time Start"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:layout_height="25dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="Time End"
         android:textSize="18sp"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:text="Date"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
-        android:fontFamily="@font/inter_bold"
+        android:fontFamily="sans-serif-black"
         android:text="Particpants"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -163,8 +163,8 @@
         android:layout_height="60dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="40dp"
-        android:fontFamily="@font/inter_bold"
+        android:layout_marginBottom="30dp"
+        android:fontFamily="sans-serif-black"
         android:text="SUBMIT"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
