--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -107,7 +107,7 @@
         android:id="@+id/timeStartSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="230dp"
         android:layout_marginTop="20dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +120,7 @@
         android:id="@+id/timeEndSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="230dp"
         android:layout_marginTop="7dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,11 +131,13 @@
 
     <EditText
         android:id="@+id/datePicker"
-        android:layout_width="97dp"
+        android:layout_width="120dp"
         android:layout_height="48dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="230dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:focusable="false"
+        android:gravity="center"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -145,11 +147,12 @@
 
     <EditText
         android:id="@+id/participants"
-        android:layout_width="97dp"
+        android:layout_width="120dp"
         android:layout_height="48dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="230dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
